#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-08-02
2014-01-07 Andy Salnikov
- regenerate whole thing from psddldata V01-00-01 with psddl V00-13-02
- fix for Acqiris::TdcData writing

Tag: V00-08-01
2013-12-23 Andy Salnikov
- camera.cpp: failed to compile with gcc47, was OK for older compilers

Tag: V00-08-00
2013-12-22 Andy Salnikov
- regenerate whole thing from psddldata V01-00-00 with psddl V00-13-00

Tag: V00-07-10
2013-12-21 Andy Salnikov
- camera.cpp: bug fix for image reading, checked size of the wrong type

Tag: V00-07-09
2013-12-19 Andy Salnikov
- forgot epix-h5.ddl.xml in previous commit 

Tag: V00-07-08
2013-12-19 Andy Salnikov
- regenerate whole thing from psddldata V00-04-56
- new epix package

Tag: V00-07-07
2013-12-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-55

Tag: V00-07-06
2013-12-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-54
- special schema for andor.ConfigV1 to remove few derived things that are
  not in the 020 schema

Tag: V00-07-05
2013-12-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-53
- new type Evr::SrcConfigV1

Tag: V00-07-04
2013-12-02 Andy Salnikov
- regenerate whole thing from psddldata V00-04-50
- new epixsampler package

Tag: V00-07-03
2013-11-18 Andy Salnikov
- add sections attribute to cspad config types
- this needs latest tag of psddl (V00-12-07 or better)

Tag: V00-07-02
2013-11-12 Andy Salnikov
- small improvement to ddl_* script

Tag: V00-07-01
2013-11-12 Andy Salnikov
- upgrade to pdsdata V07-02-07
- ipimb config types finally got array of capacitor values
- new rayonix package

Tag: V00-07-00
2013-11-05 Andy Salnikov